[package]
name = "dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dsp"
path = "src/dsp/lib.rs"

#[[bin]]
#name = "capture"
#path = "src/capture/main.rs"

#[[bin]]
#name = "process"
#path = "src/process/main.rs"


[dependencies]
biquad = "0.4.2"
heapless = {version = "0.7.16", features = ["x86-sync-pool"]}
cmsis_dsp = {git = "https://github.com/mcbridejc/cmsis_dsp.rs"}
ndarray = { version = "0.15.6", default-features = false }
num-complex = "0.4.2"
realfft = "3.0.1"
rustfft = "*"
libm = "0.2.5"

[features]
default = ["std"]
std = []


#[target.capture.dependencies]
#ctrlc = "*"
#hound = "3.4.0"
#futures = "0.3.21"

#[target.process.dependencies]
##ctrlc = "*"
#hound = "3.4.0"
#futures = "0.3.21"