[package]
name = "beamformjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = { version = "0.1.6" }
dsp = { path = "../dsp/" }
getrandom = { version = "0.2.7", features = ["js"] }
futures = "*"
rand = "0.8.5"
ndarray = "0.15"
ndarray-stats = "0.5"
num-complex = "*"
num-integer = { version="0.1", default-features = false }
num-traits = { version="0.2", default-features = false }
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ["HtmlCanvasElement"]}
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]

